# LilyPad

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build.bat  getenv.bat  git_pipeline.txt  vcpkg.json  version.txt
.github/workflows/: release.yml
client/: CMakeLists.txt  app_state.h  audio.cpp  audio.h  connection.cpp  connection.h  d3d_helpers.cpp  d3d_helpers.h  h264_decoder.cpp  h264_decoder.h  h264_encoder.cpp  h264_encoder.h  lilypad_client.aps  lilypad_client.rc  main.cpp  network_threads.cpp  network_threads.h  persistence.cpp  persistence.h  screen_capture.cpp  screen_capture.h  screen_threads.cpp  screen_threads.h  system_audio.cpp  system_audio.h  theme.cpp  theme.h  update_checker.cpp  update_checker.h
common/: CMakeLists.txt  audio_codec.cpp  audio_codec.h  chat_persistence.h  network.cpp  network.h  protocol.h  tls_socket.cpp  tls_socket.h
server/: CMakeLists.txt  auth_db.cpp  auth_db.h  lilypad_server.rc  main.cpp  tls_config.cpp  tls_config.h
